--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
 [lib]
 name = "ptx_linker"
 
+[dependencies]
+cty = "0.1"
+
 [dev-dependencies]
 difference = "1.0"
 tempdir = "0.3"
