--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ cty = "0.1"
 [dev-dependencies]
 difference = "1.0"
 tempdir = "0.3"
+
+[badges]
+travis-ci = { repository = "denzp/rust-ptx-linker" }
