--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "ptx-linker"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
 repository = "https://github.com/denzp/rust-ptx-linker"
 readme = "README.md"
+build = "build.rs"
 
 [[bin]]
 name = "ptx-linker"
@@ -23,6 +24,9 @@ error-chain = "0.10"
 [dev-dependencies]
 difference = "1.0"
 tempdir = "0.3"
+
+[build-dependencies]
+gcc = "0.3"
 
 [badges]
 travis-ci = { repository = "denzp/rust-ptx-linker", branch = "master" }
