--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "ptx-linker"
 version = "0.1.0"
 authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
 repository = "https://github.com/denzp/rust-ptx-linker"
+readme = "README.md"
 
 [[bin]]
 name = "ptx-linker"
@@ -24,5 +25,5 @@ difference = "1.0"
 tempdir = "0.3"
 
 [badges]
-travis-ci = { repository = "denzp/rust-ptx-linker" }
+travis-ci = { repository = "denzp/rust-ptx-linker", branch = "master" }
 appveyor = { repository = "denzp/rust-ptx-linker", branch = "master", service = "github" }
