--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,5 +39,9 @@ notifications:
   - provider: Email
     on_build_success: false
 
+branches:
+  only:
+    - master
+
 # Building is done in the test phase, so we disable Appveyor's build phase.
 build: false
