--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: rust
 
 matrix:
   include:
-    - rust: nightly
+    - os: linux
+      rust: nightly
       env:
       - MATRIX_EVAL="export CXX=g++-6"
       - TARGET=x86_64-unknown-linux-gnu
@@ -13,7 +14,8 @@ matrix:
           packages:
           - g++-6
 
-    - rust: nightly
+    - os: linux
+      rust: nightly
       env:
       - MATRIX_EVAL="export CXX=clang++-5.0"
       - TARGET=x86_64-unknown-linux-gnu
@@ -24,6 +26,11 @@ matrix:
           - llvm-toolchain-trusty
           packages:
           - clang-5.0
+
+    - os: osx
+      rust: nightly
+      env:
+      - TARGET=x86_64-apple-darwin
 
 before_install:
 - set -e
