--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "ptx-linker"
 version = "0.2.0"
+description = "NVPTX modules linker"
 authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
 repository = "https://github.com/denzp/rust-ptx-linker"
 readme = "README.md"
 build = "build.rs"
+license = "MIT"
 
 [[bin]]
 name = "ptx-linker"
