--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
         apt:
           sources:
           - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty
+          - llvm-toolchain-trusty-5.0
           packages:
           - clang-5.0
 
