--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,7 @@ language: rust
 matrix:
   include:
     - os: linux
-      rust:
-      - stable
-      - nightly
+      rust: stable
       env:
       - MATRIX_EVAL="export CXX=g++-6"
       - TARGET=x86_64-unknown-linux-gnu
@@ -17,9 +15,32 @@ matrix:
           - g++-6
 
     - os: linux
-      rust:
-      - stable
-      - nightly
+      rust: nightly
+      env:
+      - MATRIX_EVAL="export CXX=g++-6"
+      - TARGET=x86_64-unknown-linux-gnu
+      addons:
+        apt:
+          sources:
+          - ubuntu-toolchain-r-test
+          packages:
+          - g++-6
+
+    - os: linux
+      rust: stable
+      env:
+      - MATRIX_EVAL="export CXX=clang++-5.0"
+      - TARGET=x86_64-unknown-linux-gnu
+      addons:
+        apt:
+          sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-5.0
+          packages:
+          - clang-5.0
+
+    - os: linux
+      rust: nightly
       env:
       - MATRIX_EVAL="export CXX=clang++-5.0"
       - TARGET=x86_64-unknown-linux-gnu
@@ -32,9 +53,12 @@ matrix:
           - clang-5.0
 
     - os: osx
-      rust:
-      - stable
-      - nightly
+      rust: stable
+      env:
+      - TARGET=x86_64-apple-darwin
+
+    - os: osx
+      rust: nightly
       env:
       - TARGET=x86_64-apple-darwin
 
