--- a/.travis.yml
+++ b/.travis.yml
@@ -1,82 +1,45 @@
 language: rust
+cache: cargo
 
 matrix:
   include:
     - os: linux
       rust: stable
-      env:
-      - MATRIX_EVAL="export CXX=g++-6"
-      - TARGET=x86_64-unknown-linux-gnu
       addons:
         apt:
           sources:
-          - ubuntu-toolchain-r-test
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-5.0
           packages:
-          - g++-6
+            - g++-6
+            - llvm-5.0-dev
 
     - os: linux
       rust: nightly
-      env:
-      - MATRIX_EVAL="export CXX=g++-6"
-      - TARGET=x86_64-unknown-linux-gnu
       addons:
         apt:
           sources:
-          - ubuntu-toolchain-r-test
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-5.0
           packages:
-          - g++-6
-
-    - os: linux
-      rust: stable
-      env:
-      - MATRIX_EVAL="export CXX=clang++-5.0"
-      - TARGET=x86_64-unknown-linux-gnu
-      addons:
-        apt:
-          sources:
-          - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty-5.0
-          packages:
-          - clang-5.0
-
-    - os: linux
-      rust: nightly
-      env:
-      - MATRIX_EVAL="export CXX=clang++-5.0"
-      - TARGET=x86_64-unknown-linux-gnu
-      addons:
-        apt:
-          sources:
-          - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty-5.0
-          packages:
-          - clang-5.0
+            - g++-6
+            - llvm-5.0-dev
 
     - os: osx
       rust: stable
       env:
-      - TARGET=x86_64-apple-darwin
-
-    - os: osx
-      rust: nightly
-      env:
-      - TARGET=x86_64-apple-darwin
+        - MATRIX_EVAL="brew install llvm && export LLVM_SYS_50_PREFIX=/usr/local/opt/llvm"
 
 before_install:
-- set -e
-- eval "${MATRIX_EVAL}"
+  - eval "${MATRIX_EVAL}"
 
-cache: cargo
 script:
-- cargo check --target $TARGET
-- cargo test --target $TARGET
-
-after_script:
-- set +e
+  - cargo check
+  - cargo test
 
 branches:
   only:
-  - master
+    - master
 
 notifications:
   email:
