--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ptx-linker"
-version = "0.3.1"
+version = "0.4.0"
 description = "NVPTX modules linker"
 authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
 repository = "https://github.com/denzp/rust-ptx-linker"
@@ -21,6 +21,7 @@ path = "src/application/main.rs"
 name = "ptx_linker"
 
 [dependencies]
+llvm-sys = "50"
 cty = "0.1"
 log = "0.3"
 fern = "0.4"
