--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ptx-linker"
-version = "0.5.1"
+version = "0.6.0"
 description = "NVPTX modules linker"
 authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
 repository = "https://github.com/denzp/rust-ptx-linker"
@@ -20,13 +20,16 @@ path = "src/application/main.rs"
 name = "ptx_linker"
 
 [dependencies]
-llvm-sys = "50"
 log = "0.3"
 fern = "0.4"
 colored = "1.5"
 error-chain = "0.10"
 ar = "0.5"
 clap = { version = "2.31", features = ["yaml", "suggestions", "color"] }
+
+[dependencies.llvm-sys]
+version = "60"
+features = ["strict-versioning"]
 
 [dev-dependencies]
 difference = "1.0"
