--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ptx-linker"
-version = "0.6.2"
+version = "0.7.0"
 description = "NVPTX modules linker"
 authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
 repository = "https://github.com/denzp/rust-ptx-linker"
@@ -27,10 +27,11 @@ colored = "1.5"
 error-chain = "0.10"
 ar = "0.5"
 clap = { version = "2.31", features = ["yaml", "suggestions", "color"] }
+rustc-llvm-proxy = "0.1"
 
 [dependencies.llvm-sys]
 version = "60"
-features = ["strict-versioning"]
+features = ["no-llvm-linking"]
 
 [dev-dependencies]
 failure = "0.1"
