--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
 name = "ptx-linker"
-version = "0.6.2"
-description = "NVPTX modules linker"
+version = "0.7.0"
 authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
-repository = "https://github.com/denzp/rust-ptx-linker"
-readme = "README.md"
 license = "MIT"
-autotests = true
 
-exclude = [
-    "tests/**/*",
-]
+readme = "README.md"
+description = "NVPTX modules linker"
+repository = "https://github.com/denzp/rust-ptx-linker"
+categories = ["development-tools", "development-tools::build-utils", "external-ffi-bindings"]
+keywords = ["cli", "llvm", "cuda", "nvptx", "ptx", "linker"]
+autotests = true
 
 [[bin]]
 name = "ptx-linker"
@@ -27,10 +26,11 @@ colored = "1.5"
 error-chain = "0.10"
 ar = "0.5"
 clap = { version = "2.31", features = ["yaml", "suggestions", "color"] }
+rustc-llvm-proxy = "0.1"
 
 [dependencies.llvm-sys]
 version = "60"
-features = ["strict-versioning"]
+features = ["no-llvm-linking"]
 
 [dev-dependencies]
 failure = "0.1"
@@ -41,4 +41,6 @@ name = "linker"
 harness = false
 
 [badges]
+appveyor = { repository = "denzp/rust-ptx-linker", branch = "master", service = "github" }
 travis-ci = { repository = "denzp/rust-ptx-linker", branch = "master" }
+maintenance = { status = "passively-maintained" }
