--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,10 +7,12 @@ environment:
 
 install:
   - appveyor-retry appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
-  - rustup-init.exe -y --default-host %TARGET%
+  - rustup-init.exe -y --default-host %TARGET% --default-toolchain nightly
   - set PATH=%PATH%;C:\Users\appveyor\.cargo\bin
   - rustc -V
   - cargo -V
+  - rustup component add rust-src
+  - cargo install -f xargo
 
 build: off
 
