--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ cache: cargo
 
 matrix:
   include:
-    - name: "Linux"
+    - name: "x86_64-unknown-linux-gnu"
       os: linux
       rust: nightly
 
-    - name: "MacOSX"
+    - name: "x86_64-apple-darwin"
       os: osx
       osx_image: xcode10
       rust: nightly
