--- a/examples/depenencies/Cargo.toml
+++ b/examples/depenencies/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Denys <denys.zariaiev@gmail.com>"]
 
 [lib]
-crate_type = ["dylib"]
+crate_type = ["cdylib"]
 
 [dependencies]
 dummy_math = { path = "dependencies/dummy_math" }
