--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,19 +17,12 @@ travis-ci = { repository = "denzp/rust-ptx-linker", branch = "master" }
 maintenance = { status = "experimental" }
 
 [features]
-default = ["llvm-proxy", "cli-legacy"]
-cli-legacy = []
+default = ["llvm-proxy"]
 llvm-proxy = [
     "rustc-llvm-proxy",
     "llvm-sys/no-llvm-linking",
     "llvm-sys/disable-alltargets-init"
 ]
-
-[[bin]]
-name = "legacy-rustc-dylib-wrapper"
-doc = false
-path = "src/bin/legacy-rustc-dylib-wrapper/main.rs"
-required-features = ["cli-legacy"]
 
 [dependencies]
 ar = "0.6"
